docs/css/spectre.css
/* ... */
.pagination .page-item.page-prev,
.pagination .page-item.page-next {
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
}
.pagination .page-item.page-next {
  text-align: right;
}
.pagination .page-item .page-item-title {
  margin: 0;
}
.pagination .page-item .page-item-meta {
  margin: 0;
  opacity: .5;
}
.nav {
  display: flex;
  display: -ms-flexbox;
  display: -webkit-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}
.nav .nav-item a {
  color: #666;
  padding: .6rem .8rem;
  text-decoration: none;
}
.nav .nav-item a:focus,
.nav .nav-item a:hover {
  color: #5764c6;
}
.nav .nav-item.active > a {
  color: #333;
  font-weight: bold;
}
.nav .nav-item.active > a:focus,
.nav .nav-item.active > a:hover {
  color: #5764c6;
}
.nav .nav {
  margin-bottom: 1rem;
  margin-left: 2rem;
}
.nav .nav a {
  color: #808080;
}
.step {
  display: flex;
  display: -ms-flexbox;
  display: -webkit-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  list-style: none;
  margin: .5rem 0;
  width: 100%;
}
.step .step-item {
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  margin-top: 0;
  min-height: 2rem;
  position: relative;
  text-align: center;
}
.step .step-item:not(:first-child)::before {
  background: #5764c6;
  content: "";
  height: .2rem;
  left: -50%;
  position: absolute;
  top: .9rem;
  width: 100%;
}
.step .step-item a {
  color: #888;
  display: inline-block;
  padding: 2rem 1rem 0;
  text-decoration: none;
}
.step .step-item a::before {
  background: #5764c6;
  border: .2rem solid #fff;
  border-radius: 50%;
  content: "";
  display: block;
  height: 1.2rem;
  left: 50%;
  position: absolute;
  top: .4rem;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 1.2rem;
  z-index: 99;
}
.step .step-item.active a::before {
  background: #fff;
  border: .2rem solid #5764c6;
}
.step .step-item.active ~ .step-item::before {
  background: #efefef;
}
.step .step-item.active ~ .step-item a::before {
  background: #c5c5c5;
}
.tile {
  -webkit-align-content: space-between;
  align-content: space-between;
  -webkit-align-items: flex-start;
  align-items: flex-start;
  display: flex;
  display: -ms-flexbox;
  display: -webkit-flex;
  -ms-flex-align: start;
  -ms-flex-line-pack: justify;
  margin: 0;
  padding: .5rem 0;
}
.tile .tile-icon {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
.tile .tile-content {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}
.tile .tile-content:not(:first-child) {
  padding-left: 1rem;
}
.tile .tile-content:not(:last-child) {
  padding-right: 1rem;
}
.tile .tile-action {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
.tile .tile-title {
  font-size: 1.6rem;
  font-weight: 500;
}
.tile .tile-meta {
  color: #888;
  font-size: 1.3rem;
}
.tile.tile-centered {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
}
.tile.tile-centered .tile-content {
  overflow: hidden;
}
.toast {
  background: rgba(51, 51, 51, .9);
  border: .1rem solid #333;
  border-color: #333;
  border-radius: .2rem;
  color: #fff;
  display: block;
  padding: 1.4rem;
  width: 100%;
}
.toast.toast-primary {
  background: rgba(87, 100, 198, .9);
  border-color: #5764c6;
}
.toast.toast-success {
  background: rgba(50, 182, 67, .9);
  border-color: #32b643;
}
.toast.toast-danger {
  background: rgba(232, 86, 0, .9);
  border-color: #e85600;
}
.toast a {
  color: #fff;
  text-decoration: underline;
}
.toast a:hover,
.toast a:focus,
.toast a:active {
  opacity: .75;
}
.tooltip {
  position: relative;
}
.tooltip::after {
  background: rgba(51, 51, 51, .9);
  border-radius: .2rem;
  bottom: 100%;
  color: #fff;
  content: attr(data-tooltip);
  display: block;
  font-size: 1.2rem;
  left: 50%;
  line-height: 1.6rem;
  max-width: 32rem;
  opacity: 0;
  overflow: hidden;
  padding: .6rem 1rem;
  pointer-events: none;
  position: absolute;
  text-overflow: ellipsis;
  -webkit-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  transition: transform .2s ease, -webkit-transform .2s ease;
  transition: transform .2s ease;
  transition: -webkit-transform .2s ease;
  white-space: nowrap;
  z-index: 99;
}
.tooltip:focus::after,
.tooltip:hover::after {
  opacity: 1;
  -webkit-transform: translate(-50%, -.5rem);
  -ms-transform: translate(-50%, -.5rem);
  transform: translate(-50%, -.5rem);
}
.tooltip[disabled],
.tooltip.disabled {
  pointer-events: auto;
}
.tooltip.tooltip-right::after {
  bottom: 50%;
  left: 100%;
  -webkit-transform: translate(0, 50%);
  -ms-transform: translate(0, 50%);
  transform: translate(0, 50%);
}
.tooltip.tooltip-right:focus::after,
.tooltip.tooltip-right:hover::after {
  -webkit-transform: translate(.5rem, 50%);
  -ms-transform: translate(.5rem, 50%);
  transform: translate(.5rem, 50%);
}
.tooltip.tooltip-bottom::after {
  bottom: auto;
  top: 100%;
  -webkit-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
}
.tooltip.tooltip-bottom:focus::after,
.tooltip.tooltip-bottom:hover::after {
  -webkit-transform: translate(-50%, .5rem);
  -ms-transform: translate(-50%, .5rem);
  transform: translate(-50%, .5rem);
}
.tooltip.tooltip-left::after {
  bottom: 50%;
  left: auto;
  right: 100%;
  -webkit-transform: translate(0, 50%);
  -ms-transform: translate(0, 50%);
  transform: translate(0, 50%);
}
.tooltip.tooltip-left:focus::after,
.tooltip.tooltip-left:hover::after {
  -webkit-transform: translate(-.5rem, 50%);
  -ms-transform: translate(-.5rem, 50%);
  transform: translate(-.5rem, 50%);
}
@-webkit-keyframes loading {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
/* ... */

